Update step1_gatk_genotype.sh